# orchestrator-agent

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
src/agents/OrchestratorAgent/: __main__.py  agent.py  agent_executor.py
src/common/agent_registry/: agent_connector.py  agent_registry.json  agent_registry.py
src/common/auth/: auth.py
src/common/config/: config.py  constants.py  prompts.py
src/common/db/: Postgre.py
src/common/headers/: headers.py
src/common/logger/: logger.py
src/common/mcp/: mcp_handoff.py
src/common/mcp_registry/: mcp_connector.py  mcp_registry.json  mcp_registry.py
